fix: header spacing issues on cart

--- a/source/stylesheets/cart.css.sass
+++ b/source/stylesheets/cart.css.sass
@@ -1,8 +1,5 @@
 @import 'config'
 
-.cart .main .inner
-  margin-top: 78px
-
 .cart-header
   border-bottom: 3px solid $primary-color
   font-size: 14px
