--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -111,9 +111,6 @@ body
   margin: 0 auto
   position: relative
 
-.main .inner
-  margin-top: 130px
-
 /* Buttons */
 .btn
   display: inline-block
@@ -310,10 +307,8 @@ body
 header
   background: $background-color
   border-bottom: 6px solid $primary-color
-  position: absolute
   top: 0
   width: 100%
-  z-index: 501
 
 .maintenance_on header
   top: 27px
@@ -742,7 +737,7 @@ footer
     margin-right: 30px
 
   .main .inner
-    margin-top: 130px
+    margin-top: 5px
 
 
   /* Typography */
@@ -823,9 +818,6 @@ footer
   .inner
     margin-left: 20px
     margin-right: 20px
-
-  .main .inner
-    margin-top: 40px
 
   .home .main .inner
     margin-left: 0
